Fixed spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -53,12 +53,12 @@ h3 {
 .content {
   display: inline-block;
   width: 80%;
-  padding: 20px;
+  padding: 20px 0px 20px 20px;
 }
 
 .arrow {
   float: right;
-  padding: 30px 10px 0px 0px;
+  padding: 30px 15px 0px 0px;
 }
 
 .arrow-left {
